--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@google-cloud/dialogflow": "^6.10.0",
     "@google-cloud/translate": "^8.5.0",
+    "axios": "^1.7.7",
+    "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "firebase-admin": "^12.7.0",
     "twilio": "^5.3.5"
