--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "firebase-admin": "^12.7.0",
+    "fuse.js": "^7.0.0",
     "mongoose": "^8.8.1",
     "pdf-parse": "^1.1.1",
     "twilio": "^5.3.5"
