--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "ISC",
   "dependencies": {
     "@google-cloud/dialogflow": "^6.10.0",
+    "@google-cloud/discoveryengine": "^1.14.0",
     "@google-cloud/translate": "^8.5.0",
     "axios": "^1.7.9",
     "dotenv": "^16.4.5",
