--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@google-cloud/dialogflow": "^6.10.0",
     "@google-cloud/discoveryengine": "^1.14.0",
     "@google-cloud/translate": "^8.5.0",
+    "@google/generative-ai": "^0.21.0",
     "axios": "^1.7.9",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
