--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "express": "^4.21.1",
     "firebase-admin": "^12.7.0",
     "ioredis": "^5.4.2",
+    "natural": "^8.0.1",
+    "nltk": "^0.0.1",
     "parse": "^5.3.0",
     "pdf-parse": "^1.1.1",
     "twilio": "^5.3.5"
